--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,18 @@
-footer, nav{
-    background-color: #FFBAA7;
+footer,
+nav {
+  background-image: linear-gradient(170deg, #f8d3c9, #ff977d);
 }
 
 .nav-link:hover {
-    font-weight: bold;
-    font-size: 93%;
+  font-weight: bold;
+  font-size: 93%;
 }
 
+.rounded-circle {
+  background-image: linear-gradient(170deg, #f8d3c9, #ff977d);
+}
+
+.rounded-circle:hover {
+  background-image: linear-gradient(170deg, #ff977d, #f8d3c9);
+  font-size: 120%;
+}
